--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,13 +55,26 @@
     color: hotpink;
     text-decoration: none;
   }
+  #recentList {
+    margin-top: 0.5rem;
+    flex-shrink: 0;
+    max-height: 150px;
+    overflow-y: auto;
+  }
+  #recentList li {
+    list-style: none;
+    margin: 0.25rem 0;
+  }
+  #recentList a {
+    color: #fff;
+  }
 </style>
 </head>
 <body>
 <div id="sidebar">
   <h2>Wiki Graph</h2>
   <input id="search" placeholder="Search..." />
-  <button id="newPage">New Page</button>
+  <ul id="recentList"></ul>
   <svg id="graph" width="100%" height="400"></svg>
 </div>
 <div id="content">
@@ -77,11 +89,28 @@
     Contact: { title: "Contact", body: "<p>Email us at example@example.com</p>", links: ["Home"] }
   };
   let currentPage = "Home";
+  let recentPages = [];
+
+  function renderRecent() {
+    const list = document.getElementById("recentList");
+    list.innerHTML = recentPages.map(p => `<li><a href="#" data-link="${p}">${p}</a></li>`).join("");
+    list.querySelectorAll('[data-link]').forEach(a => {
+      a.onclick = e => {
+        e.preventDefault();
+        renderPage(a.dataset.link);
+      };
+    });
+  }
 
   function renderPage(name) {
     const page = pages[name];
     if (!page) return;
     currentPage = name;
+    if (!recentPages.includes(name)) {
+      recentPages.unshift(name);
+      if (recentPages.length > 5) recentPages.pop();
+      renderRecent();
+    }
     document.getElementById("pageTitle").innerHTML = page.title;
     document.getElementById("pageBody").innerHTML = page.body + "<h3>Links</h3><ul>" + page.links.map(l => `<li><a href="#" data-link="${l}">${l}</a></li>`).join("") + "</ul>";
     document.querySelectorAll('[data-link]').forEach(a => {
@@ -160,17 +189,11 @@
       .on("end", dragended);
   }
 
-  document.getElementById("newPage").onclick = () => {
-    const name = prompt("New page name?");
-    if (!name || pages[name]) return;
-    pages[name] = { title: name, body: "<p>New page content</p>", links: [] };
-    renderPage(name);
-  };
-
   document.getElementById("search").oninput = e => {
     const val = e.target.value.toLowerCase();
-    const found = Object.keys(pages).find(p => p.toLowerCase().includes(val));
-    if (found) renderPage(found);
+    const foundPages = Object.keys(pages).filter(p => p.toLowerCase().includes(val));
+    recentPages = foundPages;
+    renderRecent();
   };
 
   renderPage(currentPage);
