--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   <script>
     // Define available pages (content files)
     const pageFiles = {
-      Home: "pages/home.html",
-      About: "pages/about.html",
-      Contact: "pages/contact.html"
+      Home: "home.html",
+      About: "about.html",
+      Contact: "contact.html"
     };
 
     let currentPage = "Home";
