--- a/pages/home.html
+++ b/pages/home.html
@@ -5,4 +5,5 @@
 <div id="links">
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
+  <a href="reading_list.html">Reading list</a>
 </div>
