--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       Home: "pages/home.html",
       About: "pages/about.html",
       Contact: "pages/contact.html",
-      Rreading_list: "pages/reading_list.html"
+      "Reading list": "pages/reading_list.html"
     };
 
     let currentPage = "Home";
@@ -162,7 +162,7 @@
         Home: ["About", "Contact"],
         About: ["Home"],
         Contact: ["Home"],
-        Reading_list: ["Home", "About"]
+        "Reading list": ["Home", "About"]
       };
 
       const nodes = Object.keys(pages).map(k => ({ id: k }));
