--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <div id="body">
-  <p>This is a demo wiki site.</p>
+  <p>Hi I'm Emma uwu</p>
 </div>
 <div id="links">
   <a href="home.html">Home</a>
