--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,6 @@
 <h1>Contact</h1>
 <div id="body">
-  <p>Email us at example@example.com</p>
+  <p>awa you can find me swimming through space like a fish</p>
 </div>
 <div id="links">
   <a href="home.html">Home</a>
