--- a/blog.html
+++ b/blog.html
@@ -1,65 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Blog - Wiki Graph</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Blog - Jingeri Tumblr Posts</title>
 <style>
   body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    background-color: #121212;
+    background: #121212;
     color: #eee;
+    font-family: 'Inter', sans-serif;
     padding: 1rem;
   }
   h1 {
     color: coral;
   }
   .post {
-    background: #1e1e1e;
-    margin-bottom: 1rem;
-    padding: 1rem;
-    border-radius: 8px;
+    margin-bottom: 1.5rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #333;
   }
-  .post a {
+  .post h2 {
+    margin: 0 0 0.5rem;
     color: hotpink;
-    text-decoration: none;
+  }
+  .post p {
+    margin: 0 0 0.5rem;
+  }
+  .post time {
+    font-size: 0.8rem;
+    color: #999;
   }
 </style>
 </head>
 <body>
-  <h1>Blog</h1>
-  <div id="posts">Loading...</div>
+  <h1>Posts tagged "self post"</h1>
+  <div id="posts">Loading posts...</div>
 
-<script>
-const apiKey = "TtsXH6vmq96mJjcYR5I0Sxh2TXpD2bD6Jg2g70o6sIMk3cJa5S";
-const blogIdentifier = "jingeri.tumblr.com";
-const tag = "self post";
-const postsContainer = document.getElementById("posts");
+  <script>
+    function handlePosts(data) {
+      const container = document.getElementById('posts');
+      if (!data.response || data.response.posts.length === 0) {
+        container.textContent = 'No posts found with that tag.';
+        return;
+      }
+      container.innerHTML = '';
+      data.response.posts.forEach(post => {
+        const div = document.createElement('div');
+        div.className = 'post';
+        const title = post.summary || post.title || 'Untitled post';
+        // Extract post content safely, fallback to empty string if undefined
+        const content = post.body || post.caption || '';
+        const date = new Date(post.date).toLocaleDateString();
 
-async function loadPosts() {
-  try {
-    const url = `https://api.tumblr.com/v2/blog/${blogIdentifier}/posts?api_key=${apiKey}&tag=${encodeURIComponent(tag)}`;
-    const res = await fetch(url);
-    if (!res.ok) throw new Error("Network response was not ok");
-    const data = await res.json();
-    postsContainer.innerHTML = "";
-    data.response.posts.forEach(post => {
-      const div = document.createElement("div");
-      div.className = "post";
-      div.innerHTML = `<h2>${post.title || "Untitled"}</h2>
-        ${post.body || ""}
-        <p><a href="${post.post_url}" target="_blank">Read on Tumblr</a></p>`;
-      postsContainer.appendChild(div);
-    });
-  } catch (err) {
-    postsContainer.textContent = "Failed to load posts: " + err.message;
-    console.error(err);
-  }
-}
+        div.innerHTML = `
+          <h2>${title}</h2>
+          <p>${content}</p>
+          <time>Posted on ${date}</time>
+        `;
+        container.appendChild(div);
+      });
+    }
 
-loadPosts();
-</script>
+    // Create the JSONP script tag
+    const script = document.createElement('script');
+    script.src = "https://api.tumblr.com/v2/blog/jingeri.tumblr.com/posts?api_key=TtsXH6vmq96mJjcYR5I0Sxh2TXpD2bD6Jg2g70o6sIMk3cJa5S&tag=self%20post&callback=handlePosts";
+    document.body.appendChild(script);
+  </script>
 </body>
 </html>
