--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
 
     // Create the JSONP script tag
     const script = document.createElement('script');
-    script.src = "https://api.tumblr.com/v2/blog/jingeri.tumblr.com/posts?api_key=TtsXH6vmq96mJjcYR5I0Sxh2TXpD2bD6Jg2g70o6sIMk3cJa5S&tag=self post&callback=handlePosts";
+    script.src = "https://api.tumblr.com/v2/blog/jingerpi.tumblr.com/posts?api_key=TtsXH6vmq96mJjcYR5I0Sxh2TXpD2bD6Jg2g70o6sIMk3cJa5S&tag=self%20post";
     document.body.appendChild(script);
   </script>
 </body>
