--- a/blog.html
+++ b/blog.html
@@ -144,7 +144,7 @@
 
     // Insert JSONP script for Tumblr API with callback handlePosts
     const script = document.createElement('script');
-    script.src = "https://api.tumblr.com/v2/blog/jingeri.tumblr.com/posts?api_key=TtsXH6vmq96mJjcYR5I0Sxh2TXpD2bD6Jg2g70o6sIMk3cJa5S&tag=self%20post&callback=handlePosts";
+    script.src = "https://api.tumblr.com/v2/blog/jingeri.tumblr.com/posts?api_key=TtsXH6vmq96mJjcYR5I0Sxh2TXpD2bD6Jg2g70o6sIMk3cJa5S&tag=#self%20post&callback=handlePosts";
     document.body.appendChild(script);
   </script>
 </body>
